Fix error when loading app data on Quarkus